# snake_game

./: README.md  snake_game.sln
snake_game/: .gitignore  CMakeLists.txt  snake_game.vcxproj  snake_game.vcxproj.filters
snake_game/CMake/: FindSDL2_image.cmake
snake_game/src/: control.cpp  control.h  controller.cpp  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h
